--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -128,9 +128,9 @@
                   <p class="m-0">
                     CEP: <strong>{{ dadosClinica?.endereco?.nuCep }}</strong>
                   </p>
+                  <p class="m-0">Horário de Funcionamento</p>
                   <p class="m-0">
-                    Abre às: <strong>{{ dadosClinica?.dtAbertura }}</strong
-                    >, encerra às
+                    <strong>{{ dadosClinica?.dtAbertura }}</strong> -
                     <strong>{{ dadosClinica?.dtEncerramento }}</strong>
                   </p>
                 </div>
