--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row m-0">
     <div class="col-12 mb-3">
       <app-card-content>
         <div class="row">
           <div class="col-12 d-flex justify-content-between pe-0">
-            <h2 class="m-0">Filtro de Busca</h2>
+            <h2 class="m-0">Busca</h2>
             <!-- <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button> -->
           </div>
           <div class="col-md-5 col-sm-12">
