--- a/src/app/@modules/perfil/components/form-user/form-user.component.html
+++ b/src/app/@modules/perfil/components/form-user/form-user.component.html
@@ -1,163 +1,185 @@
-<form [formGroup]="formUser">
-  <div class="row m-0">
-    <div class="col-md-12 col-sm-12">
-      <h3 class="mt-3 mb-0">Dados Pessoais</h3>
-      <hr class="my-1" />
-    </div>
-    <div class="col-12">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Nome Completo</mat-label>
-        <input type="text" matInput placeholder="Digite o nome completo" autocomplete="off" formControlName="nome" />
-        <mat-error>
-          <app-error-control-message [control]="formUser.controls.nome" label="Nome"></app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-12 col-md-4">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>CPF</mat-label>
-        <input
-          type="text"
-          matInput
-          placeholder="Digite o CPF"
-          autocomplete="off"
-          mask="000.000.000-00"
-          formControlName="cpf"
-        />
-        <mat-error>
-          <app-error-control-message [control]="formUser.controls.cpf" label="CPF"></app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-12 col-md-3">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Telefone</mat-label>
-        <input
-          type="text"
-          matInput
-          placeholder="Digite o Telefone"
-          autocomplete="off"
-          mask="(00) 0 0000 0000"
-          formControlName="telefone"
-        />
-        <mat-error>
-          <app-error-control-message [control]="formUser.controls.cpf" label="Telefone"></app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-12 col-md-5">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>E-mail</mat-label>
-        <input type="text" matInput placeholder="Digite o e-mail" autocomplete="off" formControlName="email" />
-        <mat-error>
-          <app-error-control-message [control]="formUser.controls.email" label="E-mail"></app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-md-4 col-12">
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Sexo</mat-label>
-        <mat-select formControlName="sexo" required>
-          <mat-option [value]="sexo.value" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
-        </mat-select>
-        <mat-error>
-          <app-error-control-message [control]="formUser.controls.sexo" label="Sexo"> </app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <div class="col-12 col-md-8">
-      <mat-form-field appearance="outline">
-        <mat-label>Data de nascimento</mat-label>
-        <input matInput type="text" formControlName="dtNascimento" mask="00/00/0000" [dropSpecialCharacters]="false" />
-        <mat-error>
-          <app-error-control-message [control]="formUser.controls.dtNascimento" label="Data de nascimento">
-          </app-error-control-message>
-        </mat-error>
-      </mat-form-field>
-    </div>
-    <ng-container formGroupName="endereco">
-      <div class="row">
-        <div class="col-md-12 col-sm-12">
-          <h3 class="mt-3 mb-0">Endereço</h3>
-          <hr class="my-1" />
-        </div>
-        <div class="col-md-3">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>CEP</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Digite seu CEP"
-              autocomplete="off"
-              mask="00000-000"
-              formControlName="nuCep"
-            />
-          </mat-form-field>
-        </div>
-        <div class="col-md-2 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Estados</mat-label>
-            <mat-select formControlName="noEstado" required>
-              <mat-option [value]="estado.abbreviation" *ngFor="let estado of listaEstados">{{
-                estado.name
-              }}</mat-option>
-            </mat-select>
-            <mat-error>
-              <app-error-control-message [control]="formUser.controls.sexo" label="Sexo"> </app-error-control-message>
-            </mat-error>
-          </mat-form-field>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Cidade</mat-label>
-            <input type="text" matInput placeholder="Digite sua cidade" autocomplete="off" formControlName="noCidade" />
-          </mat-form-field>
-        </div>
-        <div class="col-md-4 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Logradouro</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Digite o logradouro"
-              autocomplete="off"
-              formControlName="descRua"
-            />
-          </mat-form-field>
-        </div>
-        <div class="col-md-4 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Bairro</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Digite seu bairro"
-              autocomplete="off"
-              formControlName="descBairro"
-            />
-          </mat-form-field>
-        </div>
-        <div class="col-md-2 col-sm-12">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Número</mat-label>
-            <input type="number" matInput placeholder="Digite o número" autocomplete="off" formControlName="numero" />
-          </mat-form-field>
-        </div>
+<app-card-content isHeader="true">
+  <div class="card-header">
+    <div class="row m-0 py-2">
+      <div class="col-12 d-flex justify-content-between align-items-center p-0">
+        <h4 class="m-0">Dados Pessoais</h4>
       </div>
-      <!-- /row -->
-    </ng-container>
-    <div class="col-12" *ngIf="messageError !== ''">
-      <p class="m-0 is-invalid">[Error] {{ messageError }}</p>
-    </div>
-    <div class="col-12 d-flex justify-content-end">
-      <button type="button" class="btn btn-secondary me-3" (click)="clearFormUser()">limpar</button>
-      <button type="button" class="btn btn-primary" (click)="submitFormUser()" [disabled]="!formUser.valid || loading">
-        <ng-container *ngIf="loading">
-          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-          <span class="sr-only">Aguarde...</span>
-        </ng-container>
-        <span *ngIf="!loading">salvar</span>
-      </button>
     </div>
   </div>
-</form>
+  <form [formGroup]="formUser">
+    <div class="row m-0">
+      <div class="col-12 pt-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Nome Completo</mat-label>
+          <input type="text" matInput placeholder="Digite o nome completo" autocomplete="off" formControlName="nome" />
+          <mat-error>
+            <app-error-control-message [control]="formUser.controls.nome" label="Nome"></app-error-control-message>
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col-12 col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>CPF</mat-label>
+          <input
+            type="text"
+            matInput
+            placeholder="Digite o CPF"
+            autocomplete="off"
+            mask="000.000.000-00"
+            formControlName="cpf"
+          />
+          <mat-error>
+            <app-error-control-message [control]="formUser.controls.cpf" label="CPF"></app-error-control-message>
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col-12 col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Telefone</mat-label>
+          <input
+            type="text"
+            matInput
+            placeholder="Digite o Telefone"
+            autocomplete="off"
+            mask="(00) 0 0000 0000"
+            formControlName="telefone"
+          />
+          <mat-error>
+            <app-error-control-message [control]="formUser.controls.cpf" label="Telefone"></app-error-control-message>
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col-12 col-md-5">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>E-mail</mat-label>
+          <input type="text" matInput placeholder="Digite o e-mail" autocomplete="off" formControlName="email" />
+          <mat-error>
+            <app-error-control-message [control]="formUser.controls.email" label="E-mail"></app-error-control-message>
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col-md-4 col-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Sexo</mat-label>
+          <mat-select formControlName="sexo" required>
+            <mat-option [value]="sexo.value" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
+          </mat-select>
+          <mat-error>
+            <app-error-control-message [control]="formUser.controls.sexo" label="Sexo"> </app-error-control-message>
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col-12 col-md-8">
+        <mat-form-field appearance="outline">
+          <mat-label>Data de nascimento</mat-label>
+          <input
+            matInput
+            type="text"
+            formControlName="dtNascimento"
+            mask="00/00/0000"
+            [dropSpecialCharacters]="false"
+          />
+          <mat-error>
+            <app-error-control-message [control]="formUser.controls.dtNascimento" label="Data de nascimento">
+            </app-error-control-message>
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <ng-container formGroupName="endereco">
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+            <h3 class="mt-3 mb-0">Endereço</h3>
+            <hr class="my-1" />
+          </div>
+          <div class="col-md-3">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>CEP</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu CEP"
+                autocomplete="off"
+                mask="00000-000"
+                formControlName="nuCep"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Estados</mat-label>
+              <mat-select formControlName="noEstado" required>
+                <mat-option [value]="estado.abbreviation" *ngFor="let estado of listaEstados">{{
+                  estado.name
+                }}</mat-option>
+              </mat-select>
+              <mat-error>
+                <app-error-control-message [control]="formUser.controls.sexo" label="Sexo"> </app-error-control-message>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-md-3 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Cidade</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite sua cidade"
+                autocomplete="off"
+                formControlName="noCidade"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Logradouro</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite o logradouro"
+                autocomplete="off"
+                formControlName="descRua"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Bairro</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu bairro"
+                autocomplete="off"
+                formControlName="descBairro"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Número</mat-label>
+              <input type="number" matInput placeholder="Digite o número" autocomplete="off" formControlName="numero" />
+            </mat-form-field>
+          </div>
+        </div>
+        <!-- /row -->
+      </ng-container>
+      <div class="col-12" *ngIf="messageError !== ''">
+        <p class="m-0 is-invalid">[Error] {{ messageError }}</p>
+      </div>
+      <div class="col-12 d-flex justify-content-end">
+        <button type="button" class="btn btn-secondary me-3" (click)="clearFormUser()">limpar</button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="submitFormUser()"
+          [disabled]="!formUser.valid || loading"
+        >
+          <ng-container *ngIf="loading">
+            <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+            <span class="sr-only">Aguarde...</span>
+          </ng-container>
+          <span *ngIf="!loading">salvar</span>
+        </button>
+      </div>
+    </div>
+  </form>
+</app-card-content>
