--- a/src/app/@modules/perfil/components/tab-senha/tab-senha.component.html
+++ b/src/app/@modules/perfil/components/tab-senha/tab-senha.component.html
@@ -1,5 +1,5 @@
 <div class="row m-0 pt-4">
-  <div class="col-4">
+  <div class="col-8">
     <app-card-content isHeader="true">
       <div class="card-header">
         <div class="row m-0">
@@ -10,21 +10,55 @@
       </div>
       <form [formGroup]="formResetPassword">
         <div class="row m-0">
-          <div class="col-12 col-md-6">
+          <div class="col-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Nova senha</mat-label>
-              <input type="text" matInput autocomplete="off" formControlName="password" />
+              <input
+                [type]="hide ? 'password' : 'text'"
+                matInput
+                autocomplete="current-password"
+                placeholder="Digite sua nova senha"
+                required
+                formControlName="password"
+              />
+              <button
+                mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide"
+                type="button"
+              >
+                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+              </button>
             </mat-form-field>
           </div>
-          <div class="col-12 col-md-6">
+          <div class="col-12">
             <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Confirme a nova senha</mat-label>
-              <input type="text" matInput autocomplete="off" formControlName="passwordConfirmation" />
+              <mat-label>Confirme sua senha</mat-label>
+              <input
+                [type]="hide2 ? 'password' : 'text'"
+                matInput
+                autocomplete="current-password"
+                placeholder="Confirme sua senha"
+                required
+                formControlName="passwordConfirmation"
+              />
+              <button
+                mat-icon-button
+                matSuffix
+                (click)="hide2 = !hide2"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide2"
+                type="button"
+              >
+                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+              </button>
             </mat-form-field>
           </div>
           <div class="col-12 d-flex justify-content-end">
-            <button type="button" class="btn btn-secondary me-3">limpar</button>
-            <button type="submit" class="btn btn-primary" [disabled]="loading">
+            <button type="button" class="btn btn-secondary me-3" (click)="clearForm()">limpar</button>
+            <button type="submit" class="btn btn-primary" [disabled]="loading" (click)="submitNewPassword()">
               <ng-container *ngIf="loading">
                 <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                 <span class="sr-only">Aguarde...</span>
