--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -5,33 +5,19 @@
         <div class="row">
           <div class="col-12 d-flex justify-content-between pe-0">
             <h2 class="m-0">Busca</h2>
-            <!-- <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button> -->
           </div>
           <div class="col-md-5 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Pesquise pelo nome ou CPF</mat-label>
-              <input
-                type="text"
-                matInput
-                placeholder="Digite aqui"
-                autocomplete="off"
-              /><!-- formControlName="username"-->
-              <!-- <mat-error>
-                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-                </mat-error> -->
+              <input type="text" matInput placeholder="Digite aqui" autocomplete="off" />
             </mat-form-field>
           </div>
-          <!--/col-md-4-->
           <div class="col-md-2 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Tipo</mat-label>
               <mat-select>
-                <!-- formControlName="username"-->
                 <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
               </mat-select>
-              <!-- <mat-error>
-                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-                </mat-error> -->
             </mat-form-field>
           </div>
           <!--/col-md-2-->
@@ -39,15 +25,10 @@
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Status</mat-label>
               <mat-select>
-                <!-- formControlName="username"-->
                 <mat-option [value]="sexo.id" *ngFor="let sexo of listaStatus">{{ sexo.status }}</mat-option>
               </mat-select>
-              <!-- <mat-error>
-                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-                </mat-error> -->
             </mat-form-field>
           </div>
-          <!--/col-md-2-->
           <div class="col-md-auto p-md-0 align-button col-sm-12">
             <button class="btn btn-warning me-3" type="button">Buscar</button>
             <app-form-cadastro-colaborador></app-form-cadastro-colaborador>
